<resources>
    <string name="app_name">Poke Zeus</string>
    <string name="title_background_color">Seleccione el color de fondo</string>
    <string name="title_initials_color">Seleccione el color para las iniciales</string>
    <string name="button_continue">Continuar</string>
    <string name="seekBar_select_color">Seleccionar Color</string>
    <string name="pokemon_detail_height">Altura :</string>
    <string name="pokemon_detail_weight">Peso:</string>
    <string name="pokemon_detail_types">Tipos de pokemon:</string>
    <string name="pokemon_detail_favorite">Favorito</string>
</resources>